# docker_test

./: .env  .env.public  Cargo.toml  Dockerfile  README.md  compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: lib.rs
common_types/: Cargo.toml  README.md
common_types/src/: lib.rs
db/: Dockerfile  README.md  init.sql
frontend/src/: script.js  style.css
frontend_handmade/: package.json  tsconfig.json
frontend_handmade/src/: index.html  index.ts
test_chat_client/: .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json
test_chat_client/app/: TestChat.tsx  page.tsx  styles.module.css
test_chat_client/scripts/: bindgen.js
test_chat_server/: Cargo.toml  Dockerfile  README.md
test_chat_server/src/: lib.rs
