[package]
name = "common_types"
version = "0.1.0"
edition = "2021"

[features]
bindgen = ["dep:schemars", "dep:serde_json"]

[[bin]]
name = "bindgen"
required-features = ["bindgen"]


[dependencies]
schemars = { version = "0.8.19", features = ["chrono"], optional = true }
serde_json = { version = "1.0.117", optional = true }

serde = { version = "1.0.201", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
